# Trident3DS

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  PLAN.md  PROGRESS.md  README.md  WORKFLOW.md
.github/: copilot-instructions.md
.github/workflows/: build.yml
include/trident/: libretro.h
ios/: Trident.entitlements
scripts/: setup-worktrees.ps1
src/core/: emulator.cpp  emulator.hpp
src/core/ai/: texture_upscaler.cpp  texture_upscaler.hpp
src/core/audio/: audio.cpp  audio.hpp
src/core/cpu/: cpu.cpp  cpu.hpp
src/core/gpu/: gpu.cpp  gpu.hpp
src/core/kernel/: kernel.cpp  kernel.hpp
src/core/loader/: loader.cpp  loader.hpp
src/core/memory/: memory.cpp  memory.hpp
src/core/patcher/: patcher.cpp  patcher.hpp
src/core/services/: service_manager.cpp  service_manager.hpp
src/frontend/libretro/: libretro_core.cpp
tasks/: agent-briefs.md  context.md  lessons.md  todo.md
tests/: CMakeLists.txt  test_cpu.cpp  test_loader.cpp  test_memory.cpp
